--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -29,7 +29,7 @@ jobs:
           base: header, activity, community, repositories, metadata
           config_timezone: Asia/Shanghai
           plugin_isocalendar: yes
-          plugin_isocalendar_duration: half-year
+          plugin_isocalendar_duration: full-year
           plugin_languages: yes
           plugin_languages_analysis_timeout: 15
           plugin_languages_analysis_timeout_repositories: 7.5
@@ -46,5 +46,6 @@ jobs:
           plugin_lines_repositories_limit: 4
           plugin_lines_sections: base
           plugin_notable: yes
+          plugin_notable_filter: stars:>500
           plugin_notable_from: organization
           plugin_notable_types: commit
